# day-trader

./: README.md  docker-compose.yml  lean.Dockerfile  quote-server-adaptor.Dockerfile  v2.docker-compose.yml
.github/: dependabot.yml
.github/workflows/: audit-release.yml  cli-release.yml  cli.yml  distribution-server-release.yml  lean-release.yml  lean.yml  quote-server-adaptor-release.yml  quote-server-adaptor.yml  swift-trader-release.yml  transaction-release .yml  transaction-release.yml
audit/: .gitignore  Dockerfile  cmd.sh  docker-compose.yml  package-lock.json  package.json  tsconfig.json
audit/devdb/: docker-compose.yml
audit/prisma/: schema.prisma  seed.ts
audit/prisma/dummy_data/: AccountTransactions.ts  ErrorEvents.ts  Logs.ts  NewLog.ts  QuoteServers.ts  SystemEvents.ts  UserCommands.ts
audit/src/: Log.ts  index.ts
audit/src/proto/: client.ts  (+1 more)
cli/: Cargo.toml  README.md  build.rs
cli/src/: command.rs  fuzz.rs  lib.rs  main.rs  services.rs  split_ext.rs
cli/src/command/: add.rs  command_user_id_file_name.rs  dump_log.rs  load_test_file.rs  user_id.rs  user_id_stock_symbol.rs  user_id_stock_symbol_amount_created.rs
cli/workloads/: 1-user-workload
distribution-server/: Dockerfile  default.conf.template  opentelemetry_module.conf.template
frontend/: .env.local  .gitignore  Dockerfile  README.md  package-lock.json  package.json
frontend/clients/: DayTraderClient.js  TransactionClient.js
frontend/pages/: _app.js  dashboard.js  index.js  login.js  pricing.js  settings.js  signup.js  stocks.js
frontend/proto/: day-trader.ts
frontend/src/: theme.js
lean/: .dockerignore  .env  Cargo.toml  README.md  build.rs  sqlx-data.json
lean/.sqlx/: query-07555ebb3fa9eed9665e3fa762fd5cdd4fc351c06a76695b561dad49129aa3f3.json  query-0b5d046f13b15fb90bcdcf53ef2f3b00e2261f74a42c0ef9c2bd845e9fefc15f.json  query-17ee937be03861dd0feb1ac428c088fbe9c5cda8a68b3c0cf5adf67d3d99e0ca.json  query-18f12ed04bbb17c9111c1dbe3a282df9287f4a7f05da6edf7b63600a38a3ddb0.json  query-1ae5372f5cbe822b36b7b869c28d67fcb74e9bcd204a1c9395a15e92a7972a05.json  query-1f441590542da84b8d7f0936f0a4253a04434425554a7e08252b48ba9f1054a9.json  query-2efdd49fa65e8e8ba991b033ccb0890e49c3ff62ae15c212f50444fd6faab643.json  query-370eedbac5cc7d9c48bacb227b684e1f1fe627bf39dcf064c650075873e758f7.json  query-37ec927310310f75e2bf4d9309d55b0f853fe5e89b9afb630259a7d53519ca07.json  query-3eb5f90d0397982e5bb58b7bb53116a855c2e8090aeef40ed17af107950adf40.json  query-474ee94334afdb02642decd9e8964845b355dce81d1c6837d77c44f7fa1bbb81.json  query-478d505a821d9719f2b06e7a17e16227481753d71d934fe35d26f65d73493015.json  query-4e55ae2d91f13f6e2c10f36cd455d029957c852e65a31c7ed23067f143e0085d.json  query-4f05eb8d55adc5ffb6f2c3bd698813f1b7d34f99985b3937e4077060e3c82e41.json  query-508444ae9933be68a920c5286ca2106347888332c7b462c7978238b5abed719c.json  query-592b2cf584e4e3433508fc4375666734f596e747341513c090252fecc21ef27d.json  query-5db52dc9ca18fd9006022aa8b8d092014c0ccae7c5b424c9e4136e788b24b467.json  query-604018ed6db0eaae20d84782354871ca3d48c715dc8129149723fa965a33c68d.json  query-614119b1e86a7ed3a6eb4befbd250fa2e582869bcfafb72285b0ff427ce9dd34.json  query-61773af25838b0d523415f08caf580e2184c19ed177c3d5f2e9c30baa3f222d4.json  query-667ed4c9ceccf223358b6665d30f028ac3ca594ad1ff8f99b1801144aae86417.json  query-67fad622f62c146d64639531cae508b513e0ac300dd7b6457d2f111c59a35b64.json  query-6a38bd73f2d06fbbd3869d0c9d82864816e41210583ceacbad6af4e92d5865f9.json  query-6b623b19a091fefa1f5224e98d924a1af01b7d6d991cacd0d46adf8ee0ba6845.json  query-708bc80d9b3ee8d7e660954e7cd6dd6edaa4aac1c46b5c9b2b64800a49895480.json  query-70bc7b299211efca9ed60559752901da8bf354a7547b715eed0d4941e1a21874.json  query-712ab6b9397a831489c2f91a790fb8bd70314a8c6fbd21a9139c45b1bac873d9.json  query-71c63ae06c7e2ac29c5fb821279a9fbb14c646f71408d7cd95b3822daa0a8ac3.json  query-745eb81b99a74f49dcc4b587bd42fe8c0bf3e5339b12420dbfac087b9a166a76.json  query-75266347bd72da8e5e44147bdd8d218a1f81ea9aef7568b4eb2b14d857e667c7.json  query-772061fb4e6bb019303f5839ab646aa7f60fd40fa7df89c84453119da2781fc9.json  query-798f395f93b28ee53bd4c42f6a050d87f33af14ae49a474047e20aa66550b626.json  query-85021a9a4c3c6353de87fee695a3780addfba267652475017084b1a283e58576.json  query-87b9ae129b4c877685899a0e1ec8a2cad6e489bb552cbaf627119bd864b559e0.json  query-89a57d157606bce9674a48092115a9ba055aa8caff90cff417a2ec7bbce01a22.json  query-9842e265cf3f4009847049f64e60f8591c319bcbb7131975b0d21940e8c8d32f.json  query-99bd329ede7aa25bfae7b91c620b115a3d851abfa4b18e1d6b2ebf5a828d34b0.json  query-a03d253639396d19444c53793cc723b86a904386d45381a167f73b17980ba19c.json  query-aa22559b84ccdc4aa571e55fbc51cdff1573301eb65fb1d5e3b0a561238e9706.json  query-b01118474a60d5212c0986dc18b6b7060adcf8d5c94a4883fd6cecca33809ca1.json  (+15 more)
lean/loadtests/: user1.txt
lean/migrations/: 20230328031142_add_trader.sql  20230328041008_add_queued_buy.sql  20230328044325_add_trader_rock_bottom.sql  20230328052043_add_trader_stock.sql  20230328053053_add_queued_buy_time_created.sql  20230328203616_log.sql  20230329050958_queued_sell.sql  20230329064031_add_queued_sell_time_created.sql  20230329215032_drop_foriegn_key_constraints.sql  20230330023617_remove_trader_check.sql  20230330030025_add_buy_trigger.sql  20230330030147_add_sell_trigger.sql
lean/src/: account.rs  add.rs  buy.rs  lib.rs  log.rs  main.rs  sell.rs  trigger.rs
lean/src/buy/: cancel_buy.rs  commit_buy.rs  init_buy.rs
lean/src/log/: dump_log.rs  dump_log_user.rs
lean/src/sell/: cancel_sell.rs  commit_sell.rs  init_sell.rs
lean/src/trigger/: buy.rs  sell.rs
lean/src/trigger/buy/: cancel_set_buy.rs  set_buy_amount.rs  set_buy_trigger.rs
lean/src/trigger/sell/: cancel_set_sell.rs  set_sell_amount.rs  set_sell_trigger.rs
protos/: day-trader.proto
quote-server-adaptor/: Cargo.toml  README.md  build.rs
quote-server-adaptor/src/: fake.rs  lib.rs  main.rs  otel.rs  tower_otel.rs
transaction/: .gitignore  Dockerfile  docker-compose.yml  package-lock.json  package.json  tsconfig.json
transaction/prisma/: schema.prisma  seed.ts
transaction/src/: index.ts
(+204 files in other folders)
