[package]
name = "cli"
description = "A command line interface for testing day-trader"
authors = ["Marcus Dunn"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros"] }
clap = { version = "4.2.4", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tonic = "0.9.2"
prost = "0.11.9"
anyhow = "1.0.70"
thiserror = "1.0.40"
proptest-derive = "0.3.0"
proptest = "1.0.0"

[dev-dependencies]
pretty_assertions = "1.3.0"

[build-dependencies]
tonic-build = "0.9.1"
