[package]
name = "cli"
description = "A command line interface for testing day-trader"
authors = ["Marcus Dunn"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4.4.11", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tonic = "0.10.2"
prost = "0.12.3"
anyhow = "1.0.71"
thiserror = "1.0.53"
proptest-derive = "0.4.0"
proptest = "1.0.0"

[dev-dependencies]
pretty_assertions = "1.3.0"

[build-dependencies]
tonic-build = "0.10.2"
