[package]
name = "lean"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
tower = { version = "0.4.8", features = ["full"] }
prost = "0.12.3"
tower-http = { version = "0.5.0", features = ["full"] }
tonic = "0.10.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["fmt", "env-filter"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "time", "json"] }
dotenvy = "0.15.7"
time = { version = "0.3.20", features = ["formatting"] }
anyhow = "1.0.70"
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.40"
serde_json = { version = "1.0.96", features = ["raw_value"] }
moka = { version = "0.12.1", features = ["future"] }
console-subscriber = "0.2.0"
futures = "0.3"
tracing-opentelemetry = "0.22.0"
opentelemetry = { version = "0.21.0", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.21.0", features = ["rt-tokio", "trace", "metrics"] }
opentelemetry-otlp = { version = "0.14.0", features = ["tokio", "tonic"] }
opentelemetry_api = { version = "0.20.0" }
serde-xml-rs = "0.6.0"

[dev-dependencies]
pretty_assertions = "1.3.0"

[build-dependencies]
tonic-build = "0.10.2"
