[package]
name = "quote-server-adaptor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.27.0", features = ["io-util", "rt-multi-thread", "macros", "net", "sync", "signal"] }
tonic = "0.8.3"
prost = "0.11.8"
tracing = "0.1.37"
rand = "0.8.5"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-opentelemetry = "0.18.0"
opentelemetry = { version = "0.18.0", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = "0.11.0"
tower-http = { version = "0.4.0", features = ["full"] }
tower = "0.4.13"
hyper = "1.0.0-rc.3"
futures = "0.3.27"
futures-util = "0.3.26"

[build-dependencies]
tonic-build = "0.8.4"

