[package]
name = "quote-server-adaptor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.29.1", features = ["io-util", "rt-multi-thread", "macros", "net", "sync", "signal"] }
tonic = "0.10.2"
prost = "0.12.3"
tracing = "0.1.40"
rand = "0.8.5"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-opentelemetry = "0.22.0"
opentelemetry = { version = "0.21.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.21.1", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = "0.14.0"
tower-http = { version = "0.5.1", features = ["full"] }
tower = "0.4.13"
hyper = "1.1.0"
futures = "0.3.30"
futures-util = "0.3.30"

[build-dependencies]
tonic-build = "0.10.2"

